Type chart added Button styles added for menu tile view fixed on mobile pokemon types on view page fixed removed "remove favourites" button

--- a/src/style/Core.scss
+++ b/src/style/Core.scss
@@ -3,11 +3,13 @@
     src: url("../fonts/Oswald-Light.woff2");
     font-weight: 300;
 }
+
 @font-face {
     font-family: "Oswald";
     src: url("../fonts/Oswald-Regular.woff2");
     font-weight: 400;
 }
+
 @font-face {
     font-family: "Oswald";
     src: url("../fonts/Oswald-Bold.woff2");
@@ -20,6 +22,7 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+
     img {
         animation-name: spin;
         animation-duration: 1s;
@@ -29,8 +32,19 @@
 }
 
 @keyframes spin {
-    from {transform:rotate(0deg);}
-    to {transform:rotate(360deg);}
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+select {
+    @media screen and (max-width: 725px) {
+        padding: 0.5rem 0.25rem;
+    }
 }
 
 header {
@@ -41,7 +55,8 @@ header {
     position: sticky;
     top: 0;
     height: 25px;
-    &:after{
+
+    &:after {
         bottom: -15px;
         content: "";
         background: #fff;
@@ -54,7 +69,9 @@ header {
         border: 2px solid #000000;
     }
 }
-header, footer {
+
+header,
+footer {
     width: 100%;
 }
 
@@ -65,12 +82,14 @@ footer {
     background-color: #fff;
     z-index: 2;
     text-align: right;
-    height: 50px;
+    height: 25px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     span {
         padding-left: 1rem;
+
         img {
             height: 20px;
             vertical-align: bottom;
@@ -78,10 +97,13 @@ footer {
     }
 }
 
-p, body{
+p,
+body {
     margin: 0;
 }
-html, body {
+
+html,
+body {
     font-size: 14px;
     font-family: 'Oswald', sans-serif;
     font-weight: 300;
@@ -108,6 +130,7 @@ html, body {
     font-size: 16px;
     z-index: 1000;
     transform: translate(-50%, -50%);
+
     &:before {
         content: "";
         position: absolute;
@@ -117,6 +140,7 @@ html, body {
         background: #e36c667d;
         z-index: 1;
     }
+
     img {
         width: 5rem;
         margin-left: 50%;
@@ -139,6 +163,7 @@ html, body {
     margin-top: -2px;
     position: sticky;
     z-index: 1;
+
     .search {
         margin: 0;
         padding: 0;
@@ -149,6 +174,7 @@ html, body {
         font-family: "Oswald";
         font-size: 2rem;
     }
+
     #resetSearch {
         position: absolute;
         right: 1rem;
@@ -156,14 +182,87 @@ html, body {
         font-size: 2rem;
         cursor: pointer;
     }
-    @media screen and (max-width: 725px){
+
+    @media screen and (max-width: 725px) {
         top: auto;
-        bottom: 52px;
+        bottom: 27px;
         left: 0;
         position: fixed;
         border-bottom: none;
         border-top: 2px solid black;
     }
+}
+
+.favourites,
+.typeBtn {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    background: #e36c66;
+    border-radius: 4px;
+    padding: 0.25rem 1rem;
+    color: #fff;
+    font-size: 1.25rem;
+    cursor: pointer;
+    transition: background-color 0.35s;
+    position: relative;
+
+    &:hover {
+        background: #9b4743;
+    }
+}
+
+.typeBtn {
+    .energy-icon {
+        width: 15px;
+        height: 15px;
+        background-color: #fff;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .star {
+        width: 9px;
+        height: 9px;
+        background-color: #e36c66;
+        transition: background-color 0.35s;
+        clip-path: polygon(50% 0%,
+                60% 35%,
+                98% 25%,
+                68% 50%,
+                98% 75%,
+                60% 65%,
+                50% 100%,
+                40% 65%,
+                2% 75%,
+                32% 50%,
+                2% 25%,
+                40% 35%);
+    }
+
+    &:hover {
+        .star {
+            background-color: #9b4743;
+        }
+    }
+}
+
+.viewAll {
+    border: 1px solid #e36c66;
+    border-radius: 4px;
+    padding: 0.25rem 1rem;
+    color: #e36c66;
+    font-size: 1.25rem;
+    cursor: pointer;
+    transition: all 0.35s;
+    &:hover {
+        background: #e36c66;
+        border: 1px solid #fff;
+        color: #fff;
+    }
+
 }
 
 .noResults {
@@ -174,45 +273,18 @@ html, body {
     align-items: center;
     justify-content: center;
     font-size: 4rem;
-    @media screen and (max-width: 725px){
+
+    span {
+        display: block;
+        text-align: center;
+        cursor: pointer;
+        font-size: 3rem;
+        text-decoration: underline;
+    }
+
+    @media screen and (max-width: 725px) {
         font-size: 3rem;
         padding: 0 2rem;
-    }
-}
-
-
-
-
-.toggle-container {
-    position: relative;
-    width: 70px;
-    height: 32px;
-    background-color: #c4c4c4;
-    cursor: pointer;
-    user-select: none;
-    border-radius: 20px;
-    padding: 2px;
-}
-.toggle-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
-    width: 38px;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 16px;
-    cursor: pointer;
-    color: #fff;
-    background-color: #a8d49d;
-    box-shadow: 0 2px 4px rgb(0, 0, 0, 0.25);
-    padding: 8px 12px;
-    border-radius: 20px;
-    position: absolute;
-    transition: all 0.2s ease;
-    left: 34px;
-    img {
-        width: 1rem;
     }
 }
 
@@ -221,7 +293,7 @@ html, body {
     left: 2px;
 }
 
-.t1{
+.t1 {
     font-family: Verdana, sans-serif;
     font-size: larger;
 }
